[US39-T55] Fixed the clipping issue in login component.

--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -76,7 +76,7 @@ Purple: #8e7cc3
 }
 
 .SidebarUserSignUp {
-    background-color: #d4eff7;
+    margin:5vh;
 }
 .SidebarUserProfile{
     height:13vh;
